# whisperX-PersianInterview

./: .gitignore  README-whisperx-code.md  README.md  Run_whisperx_PersianInterview.py  optimize_onnx_for_diarization.py  pyproject.toml
my_code/voice_cleaner/: README.md  __init__.py  main.py  pyproject.toml  voice_cleaner.py
