[project]
name = "voice-cleaner"
version = "0.1.0"
description = "Audio preprocessing and cleaning for speech recognition"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
voice-cleaner = "voice_cleaner:main"
dependencies = [
    "librosa>=0.11.0",
    "noisereduce>=3.0.3",
    "numpy>=2.0.2",
    "pyloudnorm>=0.1.1",
    "resampy>=0.4.3",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
